project/logs/20250514_103445.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel　:　12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl, profile:ps_6_0

Object3D.PS.hlsl:5:53: error: use of undeclared identifier 'input'
float32_t4 textureColor = gTexture.Sample(gSampler, input.texcoord);
                                                    ^

